[tool.poetry]
name = "dash-camera-app"
version = "0.1.0"
description = ""
authors = ["SamEdwardes <edwardes.s@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
